Week 4/BAM/BAM 4.1/Terraform Build/01-vpc.tf
# https://registry.terraform.io/providers/hashicorp/aws/6.17.0/docs/resources/vpc

# VPC resource
# This creates the virtual private cloud
resource "aws_vpc" "main" {
  cidr_block           = "10.130.0.0/16"
  enable_dns_hostnames = true

  tags = {
    Name = "demo-vpc"
  }
}
